--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
 .completed {
-  text-decoration: line-through solid rgb(0, 0, 0);
-}
-#botoes-controle {
-  margin-top: 25px;
+  text-decoration: line-through solid black;
 }
